# eprol

./: .gitignore  Cargo.toml  LICENSE  README.md  dune-project  eprol.opam
lib/: ast.ml  dune  lexer.mll  location.ml  parser.mly
src/: ast.rs  codegen.rs  errors.rs  ir.rs  lexer.rs  main.rs  name_encoding.rs  parser.rs  semantic.rs  semantic_expressions.rs  semantic_statements.rs  semantic_top_level.rs  semantic_types.rs
test/: dune  test_eprol.ml
test_src/: hello.epr
